[project]
name = "profile_sampler"
version = "0.0.1"
authors = [
    { name = "Giacomo Galloni" },
]
description = "Profile sampler for frequentist analysis with Cobaya"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "cobaya>=3.5.4",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/ggalloni/profile_sampler"
Issues = "https://github.com/ggalloni/profile_sampler/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"